Refactors controller to use Service layer